<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Turquoise Bicuspid</string>
    <string name="action_settings">Settings</string>
    <string name="preference_category_connectivity_title">Connectivity</string>
    <string name="preference_category_device_title">Device</string>
    <string name="preference_category_sms_title">Text Notifications</string>
    <string name="preference_category_phone_title">Phone Notifications</string>
    <string name="preference_category_repeat_title">Repeat Notifications</string>
    <string name="preference_switch_bluetooth_title">Bluetooth</string>
    <string name="preference_list_paired_title">Select device</string>
    <string name="preference_list_paired_dialog">Select a device</string>
    <string name="preference_list_paired_summary">Click to select a paired device</string>
    <string name="preference_list_paired_default">No paired devices</string>
    <string name="preference_list_scan_title">Scan</string>
    <string name="preference_list_scan_dialog">Scan Results</string>
    <string name="preference_list_scan_summary">Click to scan for devices</string>
    <string name="preference_list_scan_default">No devices</string>
    <string name="preference_list_type_title">Notification Type</string>
    <string name="preference_list_type_summary">Select a type</string>
    <string name="preference_list_time_title">Notification Time</string>
    <string name="preference_list_time_summary">Select a time</string>
    <string name="preference_list_number_title">Notification Blinks</string>
    <string name="preference_list_number_summary">Select number of blinks</string>
    <string name="preference_list_repeat_title">Repeat Notification</string>
    <string name="preference_list_repeat_summary">Select repeat notification</string>
    <string name="preference_checkbox_connect_title">Connect</string>
    <string name="preference_checkbox_connect_on">Connected</string>
    <string name="preference_checkbox_connect_off">Click to connect (no background)</string>
    <string name="preference_checkbox_onoff_title">Always On</string>
    <string name="preference_checkbox_onoff_on">Enabled</string>
    <string name="preference_checkbox_onoff_off">Disabled</string>
    <string name="preference_checkbox_service_title">Turn on</string>
    <string name="preference_checkbox_service_on">Running</string>
    <string name="preference_checkbox_service_off">Click to run (background)</string>
    <string name="preference_checkbox_sms_title">Text Messages</string>
    <string name="preference_checkbox_sms_on">Enabled</string>
    <string name="preference_checkbox_sms_off">Click to enable notifications</string>
    <string name="preference_checkbox_phone_title">Phone Calls</string>
    <string name="preference_checkbox_phone_on">Enabled</string>
    <string name="preference_checkbox_phone_off">Click to enable notifications</string>
    <string name="preference_color_title">Notification Color</string>
    <string name="preference_color_summary">Select a color</string>
    <string name="preference_clear_title">Clear</string>
    <string name="preference_clear_summary">Click to clear notification</string>
    <string name="preference_test_title">Test</string>
    <string name="preference_test_summary">Test button</string>
    <string name="notification_type_default">Blink</string>
    <string name="notification_time_default">Normal</string>
    <string name="notification_custom">Custom</string>
</resources>
